--- a/src/Diamond Engine.vcxproj
+++ b/src/Diamond Engine.vcxproj
@@ -182,8 +182,6 @@
     <ClInclude Include="Source Code\Component.h" />
     <ClInclude Include="Source Code\CO_Camera.h" />
     <ClInclude Include="Source Code\CO_DirectionalLight.h" />
-    <ClInclude Include="Source Code\CO_MeshRenderer.h" />
-    <ClInclude Include="Source Code\CO_Material.h" />
     <ClInclude Include="Source Code\CO_Transform.h" />
     <ClInclude Include="Source Code\CreationTool.h" />
     <ClInclude Include="Source Code\DEJsonSupport.h" />
@@ -281,20 +279,16 @@
     <ClInclude Include="Source Code\GameObject.h" />
     <ClInclude Include="Source Code\glmath.h" />
     <ClInclude Include="Source Code\Globals.h" />
-    <ClInclude Include="Source Code\IM_MaterialImporter.h" />
-    <ClInclude Include="Source Code\IM_ModelImporter.h" />
     <ClInclude Include="Source Code\IM_ShaderImporter.h" />
     <ClInclude Include="Source Code\IM_TextureImporter.h" />
     <ClInclude Include="Source Code\INC_AllComponents.h" />
     <ClInclude Include="Source Code\LineRenderer.h" />
     <ClInclude Include="Source Code\MaykMath.h" />
     <ClInclude Include="Source Code\MA_IconSystem.h" />
-    <ClInclude Include="Source Code\MM_ProceduralMeshGenerator.h" />
     <ClInclude Include="Source Code\MO_GUI.h" />
     <ClInclude Include="Source Code\MO_Sound.h" />
-    <ClInclude Include="Source Code\RE_Material.h" />
-    <ClInclude Include="Source Code\RE_Mesh.h" />
-    <ClInclude Include="Source Code\IM_MeshLoader.h" />
+    <ClInclude Include="Source Code\PMG.h" />
+    <ClInclude Include="Source Code\Primitive.h" />
     <ClInclude Include="Source Code\MMGui.h" />
     <ClInclude Include="Source Code\Module.h" />
     <ClInclude Include="Source Code\MO_Camera3D.h" />
@@ -314,7 +308,6 @@
     <ClInclude Include="Source Code\Tween.h" />
     <ClInclude Include="Source Code\UIElement.h" />
     <ClInclude Include="Source Code\Window.h" />
-    <ClInclude Include="Source Code\WI_Assets.h" />
     <ClInclude Include="Source Code\WI_Configuration.h" />
     <ClInclude Include="Source Code\WI_Scene.h" />
   </ItemGroup>
@@ -326,8 +319,6 @@
     <ClCompile Include="Source Code\Component.cpp" />
     <ClCompile Include="Source Code\CO_Camera.cpp" />
     <ClCompile Include="Source Code\CO_DirectionalLight.cpp" />
-    <ClCompile Include="Source Code\CO_Material.cpp" />
-    <ClCompile Include="Source Code\CO_MeshRenderer.cpp" />
     <ClCompile Include="Source Code\CO_Transform.cpp" />
     <ClCompile Include="Source Code\CreationTool.cpp" />
     <ClCompile Include="Source Code\DEJsonSupport.cpp" />
@@ -388,26 +379,21 @@
     <ClCompile Include="Source Code\IM_FileSystem.cpp" />
     <ClCompile Include="Source Code\GameObject.cpp" />
     <ClCompile Include="Source Code\glmath.cpp" />
-    <ClCompile Include="Source Code\IM_MaterialImporter.cpp" />
-    <ClCompile Include="Source Code\IM_ModelImporter.cpp" />
     <ClCompile Include="Source Code\IM_ShaderImporter.cpp" />
     <ClCompile Include="Source Code\IM_TextureImporter.cpp" />
     <ClCompile Include="Source Code\LineRenderer.cpp" />
     <ClCompile Include="Source Code\MA_IconSystem.cpp" />
     <ClCompile Include="Source Code\MMGui.cpp" />
-    <ClCompile Include="Source Code\MM_ProceduralMeshGenerator.cpp" />
     <ClCompile Include="Source Code\MO_GUI.cpp" />
     <ClCompile Include="Source Code\MO_Sound.cpp" />
-    <ClCompile Include="Source Code\RE_Material.cpp" />
-    <ClCompile Include="Source Code\RE_Mesh.cpp" />
-    <ClCompile Include="Source Code\IM_MeshLoader.cpp" />
+    <ClCompile Include="Source Code\PMG.cpp" />
+    <ClCompile Include="Source Code\Primitive.cpp" />
     <ClCompile Include="Source Code\MO_FileSystem.cpp" />
     <ClCompile Include="Source Code\MO_ResourceManager.cpp" />
     <ClCompile Include="Source Code\MO_Scene.cpp" />
     <ClCompile Include="Source Code\RE_Shader.cpp" />
     <ClCompile Include="Source Code\RE_Texture.cpp" />
     <ClCompile Include="Source Code\UIElement.cpp" />
-    <ClCompile Include="Source Code\WI_Assets.cpp" />
     <ClCompile Include="Source Code\log.cpp" />
     <ClCompile Include="Source Code\Main.cpp" />
     <ClCompile Include="Source Code\MaykMath.cpp" />
