--- a/src/Diamond Engine.vcxproj.filters
+++ b/src/Diamond Engine.vcxproj.filters
@@ -94,11 +94,11 @@
     <Filter Include="Sources\UIElements\Windows\Derived">
       <UniqueIdentifier>{3ddf461c-663f-41e9-afb5-dba7922c1012}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Sources\Tools\MMath\CD_MMM_Procedural">
-      <UniqueIdentifier>{f3a4d34a-882b-4e38-87d9-78235694d532}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Sources\Sound">
       <UniqueIdentifier>{8b58ad6c-271c-48e1-9d8b-a7a2ded3ded1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Sources\PMG">
+      <UniqueIdentifier>{b2672f06-7881-4735-9749-74e56e3ab552}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -381,17 +381,8 @@
     <ClInclude Include="Source Code\IM_FileSystem.h">
       <Filter>Sources\Tools\Importers</Filter>
     </ClInclude>
-    <ClInclude Include="Source Code\IM_MeshLoader.h">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\IM_ModelImporter.h">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClInclude>
     <ClInclude Include="Source Code\IM_TextureImporter.h">
       <Filter>Sources\Tools\Importers</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\RE_Mesh.h">
-      <Filter>Sources\Resources</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\MO_Editor.h">
       <Filter>Sources\Modules</Filter>
@@ -426,16 +417,7 @@
     <ClInclude Include="Source Code\WI_Configuration.h">
       <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClInclude>
-    <ClInclude Include="Source Code\WI_Assets.h">
-      <Filter>Sources\UIElements\Windows\Derived</Filter>
-    </ClInclude>
     <ClInclude Include="Source Code\CO_Camera.h">
-      <Filter>Sources\Components\Derived</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\CO_Material.h">
-      <Filter>Sources\Components\Derived</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\CO_MeshRenderer.h">
       <Filter>Sources\Components\Derived</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\CO_Transform.h">
@@ -465,20 +447,11 @@
     <ClInclude Include="Source Code\MA_IconSystem.h">
       <Filter>Sources\Containers</Filter>
     </ClInclude>
-    <ClInclude Include="Source Code\RE_Material.h">
-      <Filter>Sources\Resources</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\IM_MaterialImporter.h">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClInclude>
     <ClInclude Include="Source Code\INC_AllComponents.h">
       <Filter>Sources\Tools\MMath\INC_Packs</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\CO_DirectionalLight.h">
       <Filter>Sources\Components\Derived</Filter>
-    </ClInclude>
-    <ClInclude Include="Source Code\MM_ProceduralMeshGenerator.h">
-      <Filter>Sources\Tools\MMath\CD_MMM_Procedural</Filter>
     </ClInclude>
     <ClInclude Include="Source Code\MO_GUI.h">
       <Filter>Sources\Modules</Filter>
@@ -527,6 +500,12 @@
     </ClInclude>
     <ClInclude Include="Source Code\GO_Bridge.h">
       <Filter>Sources\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\Primitive.h">
+      <Filter>Sources\PMG</Filter>
+    </ClInclude>
+    <ClInclude Include="Source Code\PMG.h">
+      <Filter>Sources\PMG</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -689,17 +668,8 @@
     <ClCompile Include="Source Code\IM_FileSystem.cpp">
       <Filter>Sources\Tools\Importers</Filter>
     </ClCompile>
-    <ClCompile Include="Source Code\IM_MeshLoader.cpp">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\IM_ModelImporter.cpp">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClCompile>
     <ClCompile Include="Source Code\IM_TextureImporter.cpp">
       <Filter>Sources\Tools\Importers</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\RE_Mesh.cpp">
-      <Filter>Sources\Resources</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\MO_Editor.cpp">
       <Filter>Sources\Modules</Filter>
@@ -734,16 +704,7 @@
     <ClCompile Include="Source Code\WI_Configuration.cpp">
       <Filter>Sources\UIElements\Windows\Derived</Filter>
     </ClCompile>
-    <ClCompile Include="Source Code\WI_Assets.cpp">
-      <Filter>Sources\UIElements\Windows\Derived</Filter>
-    </ClCompile>
     <ClCompile Include="Source Code\CO_Camera.cpp">
-      <Filter>Sources\Components\Derived</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\CO_Material.cpp">
-      <Filter>Sources\Components\Derived</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\CO_MeshRenderer.cpp">
       <Filter>Sources\Components\Derived</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\CO_Transform.cpp">
@@ -773,17 +734,8 @@
     <ClCompile Include="Source Code\MA_IconSystem.cpp">
       <Filter>Sources\Containers</Filter>
     </ClCompile>
-    <ClCompile Include="Source Code\RE_Material.cpp">
-      <Filter>Sources\Resources</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\IM_MaterialImporter.cpp">
-      <Filter>Sources\Tools\Importers</Filter>
-    </ClCompile>
     <ClCompile Include="Source Code\CO_DirectionalLight.cpp">
       <Filter>Sources\Components\Derived</Filter>
-    </ClCompile>
-    <ClCompile Include="Source Code\MM_ProceduralMeshGenerator.cpp">
-      <Filter>Sources\Tools\MMath\CD_MMM_Procedural</Filter>
     </ClCompile>
     <ClCompile Include="Source Code\MO_GUI.cpp">
       <Filter>Sources\Modules</Filter>
@@ -835,6 +787,12 @@
     </ClCompile>
     <ClCompile Include="Source Code\GO_Bridge.cpp">
       <Filter>Sources\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\Primitive.cpp">
+      <Filter>Sources\PMG</Filter>
+    </ClCompile>
+    <ClCompile Include="Source Code\PMG.cpp">
+      <Filter>Sources\PMG</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
